# claude_cli_mimic

./: .gitignore  main.py  pyproject.toml  run_orchestrator.bat  run_orchestrator.ps1
src/: app.py
src/core/: domain.py  langgraph_adapter.py  orchestrator.py  orchestrator_bck.py  tmp_orch.py
src/core/agents/: file_creator.py
src/models/: __init__.py  turn.py
src/screens/: __init__.py  workspace_confirm_screen.py
src/widgets/: __init__.py  chat_log.py  input_area.py  select_option.py
