[project]
name = "claude-cli-mimic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "prompt-toolkit>=3.0.51",
    "pytest>=8.4.1",
    "pytest-async>=0.1.1",
]
